<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/ad_title"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ad_username"
        android:textSize="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!-- 显示一些具体内容的头部 信息 -->
    <TextView
        android:id="@+id/msg_f_article_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--  同一行中可以加入作者热度 作者图片等其他信息  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/readNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ad_readNum"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/likeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ad_likeNum"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/markNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ad_markNum"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>