<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/set_f_img_btn_user_head"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/set_f_tv_user_nickname"
        android:layout_below="@id/set_f_img_btn_user_head"
        android:text="nickname"
        android:textSize="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/set_f_tv_user_introduction"
        android:layout_below="@id/set_f_tv_user_nickname"
        android:text="introduction"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"/>
    <LinearLayout
        android:id="@+id/set_f_text_des"
        android:layout_below="@id/set_f_tv_user_introduction"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/article_num"
            android:textSize="40dp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/getlike_num"
            android:textSize="40dp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/getmark_num"
            android:textSize="40dp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_f_user_param"
        android:layout_below="@id/set_f_text_des"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/set_f_article_num"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/set_f_like_num"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/set_f_mark_num"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/set_f_btn_my_article"
        android:text="我的文章"
        android:textSize="20dp"
        android:layout_below="@id/set_f_user_param"
        android:layout_width="150dp"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/set_f_btn_edit"
            android:text="@string/edit"
            android:textSize="35dp"
            android:layout_centerHorizontal="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp" />
<!--注意 使用weight参数时使用 dp作为单位 可不报错-->
        <Button
            android:id="@+id/set_f_btn_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/exit"
            android:textSize="35dp" />
    </LinearLayout>

</RelativeLayout>