<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.activity.ArticleDetailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/user_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/activity_ad_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/activity_ad_userNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/readNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/activity_ad_readNum"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:text="@string/likeNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/activity_ad_likeNum"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:text="@string/markNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/activity_ad_markNum"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <WebView
                    android:layout_below="@id/user_detail"
                    android:id="@+id/activity_ad_webView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ListView
                    android:layout_below="@id/activity_ad_webView"
                    android:id="@+id/list_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="100dp"
            android:layout_height="60dp">
            <ImageButton
                android:id="@+id/article_detail_a_btn_like"
                android:layout_toLeftOf="@id/article_detail_a_btn_mark"
                android:background="@mipmap/like"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <ImageButton
                android:id="@+id/article_detail_a_btn_mark"
                android:layout_alignParentRight="true"
                android:background="@mipmap/mark2"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#e1ffff"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/article_detail_a_et_comment"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/article_detail_a_btn_comment"
            android:text="@string/comment"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>

    <!--<TextView
            android:id="@+id/html"
            android:layout_below="@id/user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>-->

<!--<LinearLayout
android:id="@+id/user_detail"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">
<TextView
    android:id="@+id/activity_ad_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
<TextView
    android:id="@+id/activity_ad_userNickname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/readNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/activity_ad_readNum"
        android:layout_width="50dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/likeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/activity_ad_likeNum"
        android:layout_width="50dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/markNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/activity_ad_markNum"
        android:layout_width="50dp"
        android:layout_height="wrap_content"/>
</LinearLayout>
</LinearLayout>
<WebView
android:layout_below="@id/user_detail"
android:id="@+id/activity_ad_webView"
android:layout_width="match_parent"
android:layout_height="wrap_content"/>-->
